- Bugfix: LockedResizeLayoutManager should no longer throw NPEs when accessed in a multi threading application
- API: DefaultIconScheme now also stores custom DockIconBridges
- API: The icon used when there are too many Dockables on a StackDockStation and the EclipseTheme is used, now depends on the actual number of overflowing Dockables. Clients can use their own icon by installing a DockIconBridge for type TabMenuDockIcon.KIND_TAB_MENU.
! API: Added method "dragged", "dragging", and "searched" to VetoableDockRelocatorListener, the method "draging" was removed and got replaced by "searched". 

{Removal of deprecated items}
! API: SizeManager and all subclasses have been removed without replacement. They were created to support persistent storage of the layout of a SplitDockStation, this job is now done by placeholders.
! API: DockFrontend.add replaced by addDockable
! API: CControl removed several methods to add/remove dockables and factories
! API: CWorkingArea removed methods "isTitleSuppressed/setTitleSuppressed", these methods are replaced by "is/setTitleShown"
! API: SingleCDockableBackupFactory replaced by SingleCDockableFactory
! API: Methods related to UIListener moved from DockController to ThemeManager
! API: DockController.getFocusObserver replaced by getMouseFocusObserver
! API: Server methods from DockUI (like "getCombiner") replaced by methods from the ThemeManager
! API: DockRelocatorListener got completely replaced by VetoableDockRelocatorListener

[Todo]
- Import/Export Perspectives from file
- DockActions/Tabs: assign priority to elements; more important elements stay longer on screen if there is not enough space for all elements
- Tabs: replace icon of drop down action showing overflowing Dockables by icon that dynamically shows the size of the menu
- Drop StackDockStation over Dockable and merge them
- EclipseTheme: Drop Dockable over Dockable and allow to select which Dockable has which index in the new StackDockStation.